Updated Ansible scripts for D3S
New scripts for D3S installation and some refinements.